<?xml version="1.0"?>
<package format="2">
  <name>proc_planner</name>
  <version>1.0.0</version>
  <description>The proc_planner package</description>

  <maintainer email="francisalonzo29@gmail.com">francis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sonia_common</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sonia_common</exec_depend>

</package>
